test/negative/ClassInheritIdenticalSignaturesCanonical/C.java
package C;
public class C {
    public C() {}
    public void x(B.X p) { return; }
}
